重构初次运行代码

--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,10 @@ dependencies {
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support:appcompat-v7:25.1.0'
-    compile project(':feature')
+
+    compile project(':function')
     compile project(':ui')
     compile project(':test')
     compile project(':common')
-    compile project(':knowledge')
+    compile project(':summary')
 }
