--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support:appcompat-v7:25.1.0'
 
     compile project(':function')
@@ -38,4 +35,5 @@ dependencies {
     compile project(':test')
     compile project(':common')
     compile project(':summary')
+    compile project(':leakcanary-android')
 }
