--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".smartupdate.SmartUpdateActivity" />
         <activity android:name=".classloader.ClassLoaderActivity" />
-        <activity android:name=".render.view.RenderActivity"></activity>
+        <activity android:name=".render.view.RenderActivity"/>
     </application>
 
 </manifest>
