添加检查任务依赖

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,12 @@ android {
             path "src/main/cpp/CMakeLists.txt"
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
+
+check.dependsOn 'checkStyle', 'findBugs', 'pmd'
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
